<resources>
    <string name="app_name">PartyApp</string>
    <string name="title_activity_principal">Principal</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">931971393611579</string>
    <string name="title_activity_maps">Map</string>



    <string name="Correo">correo</string>
    <string name="Contraseña">contraseña</string>
    <string name="nombre">nombre</string>
    <string name="registrar">registrar</string>

    <string name="sexo">sexo</string>
    <string name="avatar">avatar</string>
    <string name="galeria">galeria</string>
    <string name="masculino">Masculino</string>
    <string name="Femenino">Femenino</string>
    <string name="Nickname">NickName</string>
    <string name="nombreEvento">Nombre del evento</string>
    <string name="descipcion">Descripcion</string>
    <string name="fecha">Fecha</string>
    <string name="lugar">Lugar</string>
    <string name="publica">Publica</string>
    <string name="privada">Privada</string>
    <string name="mapa">Agregar mapa</string>
    <string name="guardar">Guardar</string>
    <string name="crearEvento">Crear Evento</string>

    <string name="SERVER_PATH"> http:// 32.209.73.120/PartyApp</string>
    <string name="TIMEOUT">10000</string>

</resources>
