<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nuevo_evento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enriquebecerram.partyapp.NuevoEvento">

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreEvento"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_alignBaseline="@id/txtNombre"
        android:layout_toRightOf="@+id/txtNombre"/>


    <TextView
        android:text="@string/descipcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/editLugar"
        android:layout_alignLeft="@+id/datePicker" />

    <EditText
        android:id="@+id/editLugar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtLugar"
        android:layout_alignBottom="@+id/txtLugar"
        android:layout_alignRight="@+id/datePicker" />

    <TextView
        android:id="@+id/txtLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lugar"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editNombre"
        android:layout_alignLeft="@+id/textView" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_below="@+id/editDescripcion"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/Radios" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapa"
        android:id="@+id/btnMapa"
        android:layout_marginBottom="59dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Radios"
        android:layout_marginBottom="32dp"
        android:layout_above="@+id/btnMapa"
        android:layout_alignParentLeft="true">
        <RadioButton android:id="@+id/radioPublica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publica"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radioPrivada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privada"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:text="@string/crearEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:id="@+id/btnCrearEvento" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editDescripcion"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignRight="@+id/editNombre" />


</RelativeLayout>
