<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:textSize="20dp"
        android:hint="@string/nombre"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtUsuarioRegistro"
        android:background="@drawable/textbox_shape"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:textSize="20dp"
        android:hint="@string/Correo"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtCorreoRegistro"
        android:background="@drawable/textbox_shape"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:textSize="20dp"
        android:hint="@string/Contraseña"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtContraseñaRegistro"
        android:background="@drawable/textbox_shape"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:textSize="20dp"
        android:hint="@string/Contraseña"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtContraseñaRegistro"
        android:background="@drawable/textbox_shape"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:textSize="20dp"
        android:hint="@string/Contraseña"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtContraseñaRegistro"
        android:background="@drawable/textbox_shape"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_below="@id/txtContrasenia"
        style="@style/StyleButton"
        android:text="@string/registrar"

        android:layout_width="200dp"
        android:layout_height="40dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

</LinearLayout>